fix aligntment of items

--- a/src/app/graph/graph-options/graph-options.component.scss
+++ b/src/app/graph/graph-options/graph-options.component.scss
@@ -10,6 +10,7 @@ mat-form-field {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .flex-container > .flex-item {
@@ -18,7 +19,7 @@ mat-form-field {
     display:flex;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1000px) {
     .flex-container {
         flex-direction: column;
     }
@@ -30,9 +31,7 @@ mat-form-field {
 }
 
 .auto-update-fieldset {
-    justify-content: center;
     max-width: 350px;
-    margin: 1em 1em;
 }
 
 .time-input {
